CVS HEAD
  * Added support for monitoring MIDI events on sampler channels
    and MIDI devices

  * Added support for sending MIDI messages to sampler channels

  * Added support for retrieving instrument's key mapping and
    keyswitch mapping

  * API Changes
    - Client: added new methods - getMidiInstrumentEntries,
      findLostDbInstrumentFiles, setDbInstrumentFilePath, setSoTimeout
      getExtendedCharacterEscaping, setExtendedCharacterEscaping
    - Parser: added new method - toExtendedEscapeSequence

  * Bug fixes:
    - null parameters and parameters with null names are now not sent
      to LinuxSampler
    - fixed a bug in DB_INSTRUMENTS_JOB_INFO notifications
    - fixed bug #75

jlscp v0.7a: 2007-12-06
  * Added support for monitoring the total number of active disk streams

  * API Changes
    - Added new interface - Instrument
    - Client: added new methods - getFileInstrumentCount,
      getFileInstrumentInfo,  getFileInstruments
    - MidiInputDevice: added new methods - getPortsParameter,
      setPortsParameter
    - Parser: some of the methods are now public

jlscp v0.6a: 2007-10-15
  * Added support for escape sequences

  * API Changes
    - Client: added new methods - editChannelInstrument, formatInstrumentsDb
    - Client: getAudioOutputDriverInfo is now public and accepts a
      dependences list of parameters
    - Client: getMidiInputDriverInfo is now public and accepts a
      dependences list of parameters

  * Bug fixes:
    - Parameters with unset values are now not sent to LinuxSampler

jlscp v0.5a: 2007-05-24
  * Implemented instruments database support
  * All notifications are now processed through the LSCP event thread

jlscp v0.4a: 2007-04-02
  * Implemented support for managing MIDI instrument maps.

  * Implemented support for managing Effect Sends.

  * Implemented print-only mode: Print-only mode means that the
    client will just print all LSCP commands to the specified output